<resources>
    <string name="app_name">SunibCloud</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="nav_home">Home</string>
    <string name="nav_task">Task</string>
    <string name="nav_files">File</string>
    <string name="nav_setting">Setting</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_conf">Password Confirm</string>
    <string name="notmember">You are not a member?</string>
    <string name="member">You already have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="happy">Happy to see you again.</string>
    <string name="login">Login</string>
    <string name="hey">Hey There!</string>
    <string name="logout">Logout</string>
    <string name="createaccount">Create Account</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="selectFile">Select File</string>
    <string name="nofile">No file choosen</string>
    <string name="uploadNew">Upload New</string>
    <string name="camera">Camera</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="docs">Document</string>
    <string name="uploadYourFile">Upload Your Files</string>
    <string name="phone">Phone number</string>
    <string name="vcode">Verification Code</string>
    <string name="folder">Create folder</string>
    <string name="create">Create</string>
    <string name="download">Download</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="firstlogin">Oops! No account connected to this number , Don\'t worry, you just need to
    provided us your credential info, and we will automatically connecting to your account!
    </string>
    <string name="connect">Connect</string>
    <string name="personalChange">Credential info changes!</string>
    <string name="maintenance">Under Maintenance</string>
    <string name="maintenance_title">Server currently maintenance, Don\'t worry our best team already handle it and we\'ll be ready soon!</string>
    <string name="okkay">Okkay!</string>
    <string name="signout">Sign out</string>
    <string name="previewimg">Preview Image</string>
</resources>
