<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="440dp"
            android:fontFamily="@font/reguler"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="28dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:padding="5dp"/>

        <EditText
            android:id="@+id/email"
            android:enabled="false"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field"
            android:padding="15dp"
            android:layout_marginBottom="15dp"
            android:text="leonard"
            android:textSize="12dp"
            android:textColor="@android:color/black"
            android:hint="Email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:fontFamily="@font/bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


        <com.hbb20.CountryCodePicker
            android:enabled="false"
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:ccpDialog_showPhoneCode="false"
            app:ccp_defaultNameCode="ID"
            app:ccp_showPhoneCode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/phoneNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.652"
            android:layout_gravity="center"
            />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="81290404447"
                android:enabled="false"
                />

        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/address"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field"
            android:padding="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="12dp"
            android:textColor="@android:color/black"
            android:hint="Address" />

            <Button
                android:id="@+id/confirmSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:background="@drawable/button"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textAllCaps="false"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>